--- a/fourPlanets/css/creativity.css
+++ b/fourPlanets/css/creativity.css
@@ -1,3 +1,7 @@
+/* .loading */
+
+.subLoading .plaDot { box-shadow: #F32651 0px 0px 50.5px; background: #F32651; }
+
 #contents ul li .cover { display: inline-block; width: 200px; height: 200px; margin: 13px 0; background: url('../imgs/creCover_1.jpg') no-repeat; background-size: cover; border-radius: 50%; transiton: 0.3s ease-in-out; -moz-transition: 0.3s ease-in-out; -webkit-transition: 0.3s ease-in-out; }
 .mid a:hover .cover { box-shadow: #F32651 0px 0px 30px; transiton: 0.3s ease-in-out; -moz-transition: 0.3s ease-in-out; -webkit-transition: 0.3s ease-in-out;}
 
@@ -17,7 +21,6 @@
 #contents ul li:nth-child(13) .cover { background-image: url('../imgs/creCover_13.jpg'); }
 #contents ul li:nth-child(14) .cover { background-image: url('../imgs/creCover_14.jpg'); }
 #contents ul li:nth-child(15) .cover { background-image: url('../imgs/creCover_15.jpg'); }
-
 
 
 @media only screen and (max-width: 2000px) {
