--- a/noahsArc/css/main.css
+++ b/noahsArc/css/main.css
@@ -68,19 +68,7 @@ input[type=text], input[type=submit], input[type=reset],input[type=password], te
   }
 }
 
-.goRound { -webkit-animation-duration: 0.75s;
-  -moz-animation-duration: 0.75s;
-  animation-duration: 0.75s;
-  -webkit-animation-iteration-count: infinite;
-  -moz-animation-iteration-count: infinite;
-  animation-iteration-count: infinite;
-  -webkit-animation-name: rotate-forever;
-  -moz-animation-name: rotate-forever;
-  animation-name: rotate-forever;
-  -webkit-animation-timing-function: linear;
-  -moz-animation-timing-function: linear;
-  animation-timing-function: linear; }
-
+.goRound { -webkit-animation-duration: 0.75s; -moz-animation-duration: 0.75s; animation-duration: 0.75s; -webkit-animation-iteration-count: infinite; -moz-animation-iteration-count: infinite; animation-iteration-count: infinite; -webkit-animation-name: rotate-forever; -moz-animation-name: rotate-forever; animation-name: rotate-forever; -webkit-animation-timing-function: linear; -moz-animation-timing-function: linear; animation-timing-function: linear; }
 .spinner { height: 30px; width: 30px; border: 8px solid #210e20; border-right-color: transparent; border-radius: 50%; display: inline-block; }
 .loading { position: absolute; z-index: 10000; text-align: center; width: 100%; height: 100%; background: #fff; }
 .spinner { z-index: 100000;  text-align: center; position: absolute; top: 50%; }
@@ -98,7 +86,7 @@ input[type=text], input[type=submit], input[type=reset],input[type=password], te
 #wrapper .left { left: -50%; -webkit-transition: 1s; transition: 1s; }
 
 #wrapper .zIndex { z-index: 1; }
-#wrapper .zIndexMinus { z-index: -1 }
+#wrapper .zIndexMinus { z-index: -1; }
 
 #wrapper .fontSize { font-size: 0 !important; -webkit-transition: 0s; transition: 0s; }
 #wrapper .heightZero { height: 0 !important; -webkit-transition: 0s;transition: 0s; }
@@ -203,7 +191,7 @@ header .lang a:hover { opacity: 1 }
 #about .seper { display: block; width: 1px; height: 100%; background-color: #ffc000; float: left; margin-left: 20px; margin-right: 30px;}
 #about .descript {font-weight: 300; font-size: 14px; opacity: 0.7; display: block; text-align: left; padding-left: 10px; line-height: 18px; }
 
-#about .deco { -webkit-transition: 2s; transition: 2s; display: inline-block; margin-top: 127px; text-align: center; width: 1180px; height: 800px; border: 10px solid #e8e6e8  }
+#about .deco { -webkit-transition: 1s; transition: 1s; display: inline-block; margin-top: 127px; text-align: center; width: 1180px; height: 800px; border: 10px solid #e8e6e8  }
 
 
 
